# k-nearest-neighbors

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  k_nearest_neighbors.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/: models.py
src/app/: api.py  routes.py
src/config/: settings.py
src/libs/: errors.py  neighbors.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_neighbors.py
