[project]
name = "k-nearest-neighbors"
version = "0.1.0"
description = "Nearest-neighbor API built on the BallTree analysis (haversine, two coordinate lists)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.5.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "S"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# exploratory notebook: allow long lines
"*.ipynb" = ["E501"]
# tests: asserts are the point
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
